--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -3,8 +3,8 @@ html(lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='./css/reset.css', rel='stylesheet')
-    link(href='./css/styles.css', rel='stylesheet')
+    link(href='/css/reset.css', rel='stylesheet')
+    link(href='/css/styles.css', rel='stylesheet')
     link(
       rel='stylesheet',
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css',
