--- a/app/views/pet.pug
+++ b/app/views/pet.pug
@@ -3,8 +3,8 @@ html(lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='./css/reset.css', rel='stylesheet')
-    link(href='./css/styles.css', rel='stylesheet')
+    link(href='/css/reset.css', rel='stylesheet')
+    link(href='/css/styles.css', rel='stylesheet')
     link(
       rel='stylesheet',
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css',
@@ -31,8 +31,18 @@ html(lang='en')
           if data.vaccines.length > 0
             ul.list-group
               each vaccine of data.vaccines
-                .list-group-item.flex-column.align-items-start
-                  h5= vaccine.name
-                  small= vaccine.basePrice
-                  p= vaccine.vaccinationRecord.endPrice
-                  p= vaccine.vaccinationRecord.administrationDate
+                if new Date(vaccine.vaccinationRecord.administrationDate) < Date.now()
+                  .list-group-item.flex-column.align-items-start.list-group-item-success
+                    h5= vaccine.vaccinationRecord.administrationDate
+                    p= vaccine.name
+                    small= `Original Price: ${vaccine.basePrice}`
+                    p= `Paid: ${vaccine.vaccinationRecord.endPrice}`
+                else
+                  .list-group-item.flex-column.align-items-start.list-group-item-warning
+                    h5= vaccine.vaccinationRecord.administrationDate
+                    p= vaccine.name
+                    small= `Original Price: ${vaccine.basePrice}`
+                    p= `Paid: ${vaccine.vaccinationRecord.endPrice}`
+          else
+            .list-group
+              h5.list-group-item= 'No vaccines records found.'
