--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -6,24 +6,23 @@ html(lang='en')
     link(href='/css/reset.css', rel='stylesheet')
     link(href='/css/styles.css', rel='stylesheet')
     link(
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css',
       rel='stylesheet',
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css',
-      integrity='sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65',
+      integrity='sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp',
       crossorigin='anonymous'
     )
     script(
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js',
-      integrity='sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4',
-      crossorigin='anonymous'
-    )
-    script(
-      src='https://kit.fontawesome.com/a34e179989.js',
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js',
+      integrity='sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N',
       crossorigin='anonymous'
     )
     title Pet Dashboard
   body
-    header
-      h1.text-center= 'Pet Dashboard'
-    main.container
+    nav.navbar.justify-content-center.text-center.bg-secondary(
+      data-bs-theme='dark'
+    )
+      a.navbar-brand.fs-3.me-0(href='/')= 'Pet Dashboard'
+    main.container.pt-3
+      h2.text-center= 'Owners'
       include mixins/dashboard
       +dashboard(data)
