--- a/app/views/mixins/dashboard.pug
+++ b/app/views/mixins/dashboard.pug
@@ -1,9 +1,11 @@
 mixin dashboard(data)
-  #dash.row.row-cols-3.g-3.text-center
+  #dash.row.row-cols-3.g-1.g-md-3.text-center
     if data.length > 0
     each owner in data
       .col
         .card
-          .card-body
-            a(href=`/owners/${owner.id}`)
+          .card-body.light-hover
+            a.text-decoration-none.link-primary.stretched-link(
+              href=`/owners/${owner.id}`
+            )
               h5.card-title= owner.name
