--- a/app/views/pet.pug
+++ b/app/views/pet.pug
@@ -6,43 +6,43 @@ html(lang='en')
     link(href='/css/reset.css', rel='stylesheet')
     link(href='/css/styles.css', rel='stylesheet')
     link(
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css',
       rel='stylesheet',
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css',
-      integrity='sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65',
+      integrity='sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp',
       crossorigin='anonymous'
     )
     script(
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js',
-      integrity='sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4',
-      crossorigin='anonymous'
-    )
-    script(
-      src='https://kit.fontawesome.com/a34e179989.js',
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js',
+      integrity='sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N',
       crossorigin='anonymous'
     )
     title Pet Dashboard - #{data.name}
   body
-    header
-      h1.text-center= 'Pet Dashboard'
-    main.container
-      .card.text-center
+    nav.navbar.justify-content-center.text-center.bg-secondary(
+      data-bs-theme='dark'
+    )
+      a.navbar-brand.fs-3.me-0(href='/')= 'Pet Dashboard'
+    main.container-sm.gx-0
+      .card.row-cols-1.row-cols-md-2.row-cols-lg-3.align-items-center.text-center
         .card-body
           h3.card-text= data.name
+          p= data.type.charAt(0).toUpperCase() + data.type.slice(1)
           if data.vaccines.length > 0
+            h4= 'Vaccinations'
             ul.list-group
               each vaccine of data.vaccines
                 if new Date(vaccine.vaccinationRecord.administrationDate) < Date.now()
-                  .list-group-item.flex-column.align-items-start.list-group-item-success
+                  .list-group-item.list-group-item-success
                     h5= vaccine.vaccinationRecord.administrationDate
                     p= vaccine.name
-                    small= `Original Price: ${vaccine.basePrice}`
-                    p= `Paid: ${vaccine.vaccinationRecord.endPrice}`
+                    small= `Original Price: $${vaccine.basePrice}`
+                    p.fw-bold= `Paid: $${vaccine.vaccinationRecord.endPrice}`
                 else
-                  .list-group-item.flex-column.align-items-start.list-group-item-warning
-                    h5= vaccine.vaccinationRecord.administrationDate
+                  .list-group-item.list-group-item-warning
+                    h5= `Scheduled ${vaccine.vaccinationRecord.administrationDate}`
                     p= vaccine.name
-                    small= `Original Price: ${vaccine.basePrice}`
-                    p= `Paid: ${vaccine.vaccinationRecord.endPrice}`
+                    small= `Original Price: $${vaccine.basePrice}`
+                    p.fw-bold= `Expected Price: $${vaccine.vaccinationRecord.endPrice}`
           else
             .list-group
               h5.list-group-item= 'No vaccines records found.'
